Fix project info scroll on mobile

--- a/src/Pages/Project/Projects.scss
+++ b/src/Pages/Project/Projects.scss
@@ -125,6 +125,11 @@ $project-info-panel-width: 550px;
 		display: flex;
 		background-color: rgba(0, 0, 0, 0.8);
 
+		@media (max-width: $project-info-panel-width) {
+			overflow-y: scroll;
+			background-color: rgba(0, 0, 0, 0);
+		}
+
 		.blank-space {
 			width: 100%;
 			height: 100%;
@@ -136,14 +141,24 @@ $project-info-panel-width: 550px;
 			display: flex;
 			flex-direction: column;
 			gap: 20px;
-			padding: 20px;
+			padding: 30px 20px;
+			padding-bottom: 150px;
 			min-width: $project-info-panel-width;
 			max-width: $project-info-panel-width;
 			height: 100%;
 			background-color: white;
 			overflow-y: scroll;
 			box-sizing: border-box;
-			animation: slide-in 1s ease-out;
+			animation: slide-in1 0.5s ease-out;
+			z-index: 5;
+
+			@media (max-width: $project-info-panel-width) {
+				position: absolute;
+				left: 0;
+				overflow-y: auto;
+				animation: slide-in2 0.5s ease-out;
+				height: fit-content;
+			}
 
 			button {
 				background: none;
@@ -228,11 +243,20 @@ $project-info-panel-width: 550px;
 	}
 }
 
-@keyframes slide-in {
+@keyframes slide-in1 {
 	0% {
 		margin-left: 1500px;
 	}
 	100% {
 		margin-left: 0px;
+	}
+}
+
+@keyframes slide-in2 {
+	0% {
+		left: 1500px;
+	}
+	100% {
+		left: 0px;
 	}
 }
