--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,7 @@
 html {
 	scroll-behavior: smooth;
+	height: 100%;
+	overflow-y: hidden;
 }
 
 body {
@@ -10,11 +12,11 @@ body {
 	-moz-osx-font-smoothing: grayscale;
 
 	/* for svg to scale correctly */
-	height: 100vh;
+	height: 100%;
 	/* for background to not scroll along with page */
 	background-attachment: fixed;
 
-	overflow-y: scroll;
+	position: relative !important;
 }
 
 .App {
